# Progetto-Robotica-RHCR-Lifelong-MAPF

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md  final_stress_test.py  requirements.txt  sweep_sensitivity.py  warehouse_final_stress_test.py
analyzer_and_report/: README.md  analyze_bottleneck.py  analyze_conflict_profile.py  analyze_grid_graphs.py  analyze_normalized_metrics.py  generate_report_plots.py
docs/: MAPS_ANALYSIS.md  REPORT.md  SORTING_MAP.md  WAREHOUSE_MAP.md
exp/movingAI_warehouse/: final_report.csv
exp/movingAI_warehouse/ECBS_k100/: config.txt  paths.txt  solver.csv  tasks.txt
exp/movingAI_warehouse/ECBS_k120/: config.txt  paths.txt  solver.csv  tasks.txt
exp/movingAI_warehouse/ECBS_k20/: config.txt  paths.txt  solver.csv  tasks.txt
exp/movingAI_warehouse/ECBS_k50/: config.txt  paths.txt  solver.csv  tasks.txt
exp/movingAI_warehouse/PBS_k20/: config.txt  paths.txt  solver.csv  (+1 more)
exp/sensitivity_sweep_k50/: sensitivity_raw.csv  sensitivity_summary.csv
exp/sensitivity_sweep_k80/: sensitivity_raw.csv  sensitivity_summary.csv
exp/sensitivity_sweep_warehouse_optimized/: sensitivity_raw.csv  sensitivity_summary.csv
inc/: LRAStar.h
maps/: map_to_grid.py  warehouse_map.grid  warehouse_optimized.grid
maps/maps_graphs/: sorting.graphml
src/: BasicSystem.cpp  LRAStar.cpp  WHCAStar.cpp  driver.cpp
visualizer/: LICENSE  NOTICE.md  README.md  batch_process.py  compare_experiments.py  requirements.txt  test_export.py  visualize_experiment.py
visualizer/templates/: viewer.html
visualizer/utils/: data_loader.py  metrics_calculator.py
(+1438 files in other folders)
